--- a/client/src/components/NoteCreator.css
+++ b/client/src/components/NoteCreator.css
@@ -62,3 +62,18 @@
     font-weight: bold;
 }
 
+.close-note-creator-button {
+    color:blue;
+    font-size: 15px;
+    text-align: right;
+    font-weight: bold;
+    align-self: flex-end;
+    width: fit-content;
+    border-radius: 5px;
+    padding: 3px;
+    margin-top: 5px;
+}
+.close-note-creator-button:hover {
+    cursor: pointer;
+    user-select: none;
+}
