--- a/client/src/components/LoginForm.css
+++ b/client/src/components/LoginForm.css
@@ -5,19 +5,21 @@
     align-self: center;
     justify-self: center;
     display: flex;
+    gap: 5px;
     flex-direction: column;
     flex-wrap: nowrap;
     border-radius: 20px;
     padding: 3rem;
-    width: fit-content;
+    width: 20em;
     height: fit-content;
     border: 1px solid black;
+    box-shadow: 5px 3px 10px 10px;
 }
 .log-in-container form {
+    font-size: 1.2em;
     display: flex;
     flex-direction: column;
     margin-top: 1em;
-    font-size: 1em;
 }
 .form-heading {
     font-size: 30px;
@@ -36,7 +38,9 @@
     margin-top: 2em;
     border-radius: 5px;
     width: 5rem;
+    font-size: 1.1rem;
     height: 2rem;
+    font-weight: bold;
 }
 .log-in-container label {
     margin-top: 1rem;
