--- a/client/src/components/SignUpForm.css
+++ b/client/src/components/SignUpForm.css
@@ -5,19 +5,21 @@
     align-self: center;
     justify-self: center;
     display: flex;
+    gap: 5px;
     flex-direction: column;
     flex-wrap: nowrap;
     border-radius: 20px;
     padding: 3rem;
-    width: fit-content;
+    width: 20em;
     height: fit-content;
     border: 1px solid black;
+    box-shadow: 5px 3px 10px 10px;
 }
 .sign-up-container form {
+    font-size: 1.2em;
     display: flex;
     flex-direction: column;
     margin-top: 1em;
-    font-size: 1em;
 }
 .form-heading {
     font-size: 30px;
@@ -37,17 +39,32 @@
     border-radius: 5px;
     width: 5rem;
     height: 2rem;
+    font-size: 1em;
+    font-weight: bold;
 }
 .sign-up-container label {
     margin-top: 1rem;
     font-weight: bold;
 }
-.error {
-    position: absolute;
-    border-radius: 10px;
-    color: red;
-    align-self: center;
-    bottom: 1rem;
-    margin: 1rem 1rem 0 1rem;
+.errors {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
 }
+.error {
+    font-size: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: #e57373;
+    width: 90%;
+    border-radius: 5px;
+    padding: 5px;
+    position: relative;
+    margin-top: 20px;
+}
+
 
