--- a/client/src/components/LoginForm.css
+++ b/client/src/components/LoginForm.css
@@ -5,7 +5,7 @@
     align-self: center;
     justify-self: center;
     display: flex;
-    gap: 5px;
+    gap: 1rem;
     flex-direction: column;
     flex-wrap: nowrap;
     border-radius: 20px;
@@ -18,6 +18,7 @@
 .log-in-container form {
     font-size: 1.2em;
     display: flex;
+    gap: 0.7rem;
     flex-direction: column;
     margin-top: 1em;
 }
@@ -31,8 +32,16 @@
     height: 1.2em;
     text-decoration: none;
     font-weight: lighter;
-    border-radius: 5px;
-    padding-left: 5px;
+    padding: 5px 0 5px 0;
+    border: none;
+    border-bottom: 1px solid black;
+    background: none;
+}
+.log-in-container input:focus {
+    /*border: none;*/
+    background: none;
+    outline: none;
+    border-bottom: 1px solid black;
 }
 .log-in-container button {
     margin-top: 2em;
