--- a/client/src/components/NoteCardEditMode.css
+++ b/client/src/components/NoteCardEditMode.css
@@ -3,6 +3,7 @@
     display: flex;
     top: 25%;
     transform: scale(2);
+    gap: 4px;
     justify-self: center;
     flex-flow: column;
     padding: 1em 1em 0.5em 1em;
@@ -10,7 +11,7 @@
     border-radius: 10px;
     z-index: 2;
     background: #ECEBE4;
-    box-shadow: darkslategrey 0 0 10px 5px;
+    box-shadow: darkslategrey 0 0 5px 2px;
 }
 
 .active-note-title {
@@ -78,11 +79,14 @@ body:not(.focused) {
     filter: blur(0.5);
 }
 .close-edit-mode-button {
+    bottom: 1em;
+    right: 3em;
+    position: absolute;
+    align-self: flex-end;
     color: blue;
     font-size: 9px;
     text-align: right;
     font-weight: bold;
-    align-self: flex-end;
     width: fit-content;
     border-radius: 5px;
     padding: 4px;
@@ -114,4 +118,30 @@ body:not(.focused) {
     background-color: black;
     cursor: pointer;
 }
+.active-note-title::-webkit-scrollbar {
+    position: absolute;
+    right: 0;
+    width: 5px;
+    border-radius: 6px;
+    border: 1px solid darkslategrey;
+    padding: 10px;
+}
 
+.active-note-title::-webkit-scrollbar-thumb {
+    background-color: black;
+    border-radius: 6px;
+    width: 5px;
+    margin-left: 10px ;
+}
+
+.active-note-title::-webkit-scrollbar-thumb:hover {
+    background-color: black;
+    cursor: pointer;
+}
+.options-tray {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: left;
+    gap: 0.5em;
+}
