--- a/client/src/components/ShareButton.css
+++ b/client/src/components/ShareButton.css
@@ -1,4 +1,4 @@
-.delete-container {
+.share-icon-container {
     width: 0.8em;
     padding: 5px;
     display: flex;
@@ -6,11 +6,12 @@
     justify-content: center;
     border-radius: 25%;
 }
-.delete-container:hover {
+.share-icon-container:hover {
     cursor: pointer;
     filter: brightness(95%);
 }
-.delete-icon {
+.share-icon {
     height: inherit;
     width: inherit;
 }
+
